KGI : Fix Dofus APP

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,6 @@
     <string name="activity_sign_in_label">Sign In</string>
     <string name="activity_register_label">Register</string>
     <string name="Administration">Administrate</string>
+    <string name="itemImage">Item</string>
 
 </resources>
